# Mesh_Computational_Geometry

./: .gitignore  CMakeLists.txt  Makefile  Mesh_Computational_Geometry  Mesh_Computational_Geometry.pro  Mesh_Computational_Geometry.pro.user.4.10-pre1  README.md  color.cpp  color.h  curvaturemesh.cpp  delaunaymesh.cpp  gldisplaywidget.cpp  gldisplaywidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  math_util.cpp  math_util.h  mesh.cpp  mesh.h  mesh3d.cpp  mesh3d.h  mesh_refined_delaunay.cpp  mesh_refined_delaunay.h  meshcrust.cpp  meshcrust.h  meshdelaunay.cpp  meshdelaunay.h  meshparabola.cpp  meshparabola.h  meshruppert.cpp  meshruppert.h  moc_mainwindow.cpp  opengldisplaymesh.cpp  point.cpp  point.h  predicate.h  queen.off  simplify.cpp  (+3 more)
resources/: points_courbe.txt  queen.off
src/: main.cpp  mainwindow.ui  opengldisplaymesh.cpp
src/camera/: ArcballCamera.cpp  ArcballCamera.h  OrbitCamera.cpp  OrbitCamera.h
src/meshes/: Edge.cpp  Edge.h  Face.cpp  Face.h  Mesh.cpp  Mesh.h  Mesh2D.cpp  Mesh2D.h  Mesh3D.cpp  Mesh3D.h  Vertex.cpp  Vertex.h  mesh.cpp  mesh.h
src/meshes/2d/: mesh2d.cpp  mesh2d.h  mesh_refined_delaunay.cpp  mesh_refined_delaunay.h  meshcrust.cpp  meshcrust.h  meshdelaunay.cpp  meshdelaunay.h  meshparabola.cpp  meshparabola.h  meshruppert.cpp  meshruppert.h  visibilitymarch.cpp  voronoi.cpp
src/meshes/3d/: Mesh3D.h  curvature.h  mesh3d.cpp  mesh3d.h  meshcurvature.cpp  simplify.cpp
src/rendering/: mesh_rendering.cpp  mesh_rendering.h
src/techniques/: predicate.cpp  predicate.h  simplify.cpp  simplify.h
src/techniques/2d/: MeshCrust.cpp  MeshCrust.h  MeshParabola.cpp  MeshParabola.h  MeshRuppert.cpp  MeshRuppert.h  crust.cpp  crust.h  delaunay.cpp  delaunay.h  parabola.cpp  parabola.h  ruppert.cpp  visibility_march.cpp  visibility_march.h  voronoi.cpp  voronoi.h
src/techniques/3d/: curvature.cpp  curvature.h
src/ui/: MainSetup.cpp  MainSetup.h  MainWindow.cpp  MainWindow.h  MeshConfig.h  Scene.cpp  Scene.h  Setup2D.cpp  Setup2D.h  main_setup.ui  main_window.ui  setup_2d.ui  setup_parabola.ui  setup_ruppert.ui
src/utils/: BoundingBox.h  color.cpp  color.h  enums.h  math.cpp  math.h  point.cpp  point.h  read_3d_file.cpp  read_3d_file.h  read_numbers.h  read_obj.cpp  read_obj.h
src/widgets/: gldisplaywidget.cpp  gldisplaywidget.h
tests/: test_delaunay.cpp  test_mesh.cpp  test_predicates.cpp  test_simplify.cpp  test_utils.cpp  test_visibility_march.cpp
